--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -115,16 +115,72 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
-						<div class="about-image wow fadeInLeft">
-							<img src="{% static 'main/img/about-image.jpg'%}" alt="About Image" />
+						<div >
+							<img src="{% static 'main/img/112.jpg'%}" alt="About Image" />
 						</div>
 					</div>
 					<div class="col-sm-6">
-						<div class="about-text wow fadeInRight">
+						<div >
 							<h3>О компании</h3>
-							<p>Совместный проект LifeStyle при ОсОО «АromaЕсо» это транснациональный проект, специализирующийся на реализации фармакологических препаратов и косметических средств на международном розничном рынке, а так же туристическом бизнесе, финансовых операциях и инвестиционной деятельности.
-Основные направления деятельности проекта — оздоровление, восстановление и поддержание здоровья. Продукция разработана на основе пяти тысячелетнего опыта тибетской медицины, изготовление с использованием современных технологий.
-                                <a href="#" class="btn btn-read-more">Подробнее</a>
+							<p>Совместный проект LifeStyle при ОсОО «АromaЕсо» это
+                                транснациональный проект, специализирующийся на реализации
+                                фармакологических препаратов и косметических средств на международном
+                                розничном рынке, а так же туристическом бизнесе, финансовых операциях и инвестиционной деятельности.
+                                    Основные направления деятельности проекта — оздоровление, восстановление и поддержание
+                                здоровья. Продукция разработана на основе пяти тысячелетнего опыта тибетской медицины,
+                                изготовление с использованием современных технологий.
+{#                                <a href="#" class="btn btn-read-more">Подробнее</a>#}
+
+                            <!-- Button trigger modal -->
+<button type="button" class="btn btn-read-more" data-toggle="modal" data-target="#exampleModalCenter">
+  Подробнее
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalCenterTitle">О компании</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+            <p style="text-indent: 30px"> Совместный проект LifeStyle при ОсОО «АromaЕсо» это транснациональный проект,
+          специализирующийся на реализации фармакологических препаратов и косметических
+          средств на международном розничном рынке, а так же туристическом бизнесе, финансовых операциях и инвестиционной деятельности.
+            Основные направления деятельности проекта — оздоровление, восстановление и поддержание здоровья.
+          Продукция разработана на основе пяти тысячелетнего опыта тибетской медицины,
+          изготовление с использованием современных НАНОТЕХНОЛОГИЙ.
+                            <br/></p>
+
+            <p style="text-indent: 30px">МИССИЯ КОМПАНИИ: содействовать повышению качества жизни людей, предоставляя возможность независимым
+          дистрибуторам компании вести выгодный и интересный бизнес в партнерстве с компанией, а для
+          клиентов пользоваться знаниями и качественной продукцией для восстановления и поддержания здоровья,
+          предоставление населению возможность  потребления, улучшение качества жизни,
+          построение гармоничного международного сообщества.
+                <br/></p>
+            <p style="text-indent: 30px">ФИЛОСОФИЯ БИЗНЕСА: Служить обществу, восстанавливая здоровье человечества.
+                <br/></p>
+<p style="text-indent: 30px">КОРПОРАТИВНЫИ ДУХ КОМПАНИИ: Внести максимальный вклад в развитие
+          экономики страны, стремится к великим целям посредством организации командной работы и истиной самоотдачи.
+    <br/></p>
+        <p style="text-indent: 30px">«Я желаю Вам, мои дорогие партнеры дальнейших успехов и процветания в
+          деле развития нашего общего дела, никогда не терять уверенности в
+          себе, веру в себя и в компанию, всегда добиваться всего, о чем мечтает сердце,
+          больших вознаграждений за любые старания. И поблагодарить Вас, мои дорогие партнеры,
+          за доверие и поддержку, за продуктивную работу, которая помогает нам развиваться и идти только
+            вперед, за реализацию всех намеченных целей и за вашу искреннюю веру в наше дело»</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 						</div>
 					</div>
 				</div>
@@ -152,7 +208,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="title">
-							<h3>Наши <span>продукты</span></h3>
+                            <a href="{% url 'Products' %}"> <h3>Наши <span>продукты</span></h3></a>
 						</div>
 					</div>
 				</div>
@@ -167,10 +223,10 @@
     <div class="items row">
       {% for product in products %}
         <div class="item col-md-3">
-<a href="{{product.id}}">
+<a href="{% url 'ProductDetails' product.id %}">
        <img src="{% if product.image %}{{ product.image.url }}{% endif %}" class="img-responsive " >
 </a>
-            <a href="{{ product.id}}"> <h4> {{ product.name }}</h4></a><br>
+            <a href="{% url 'ProductDetails' product.id %}"> <h4> {{ product.name }}</h4></a><br>
 
         </div>
       {% endfor %}
@@ -290,7 +346,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="title">
-							<h3>Latest From The <span>Blog</span></h3>
+							<h3>Последние <span>Новости</span></h3>
 						</div>
 					</div>
 				</div>
@@ -427,7 +483,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-12 ">
-							<div class="copy-text">
+							<div class="copyright pull-right">
 								<p>All Rights Reserved | Copyright 2019 ©   <a href="#">Ananasit</a></p>
 							</div>
 						</div>
@@ -449,7 +505,7 @@
         <script src="{% static 'main/js/jquery.mousewheel-3.0.6.pack.js'%}"></script>
         <script src="{% static 'main/js/paralax.js'%}"></script>
         <script src="{% static 'main/js/jquery.smooth-scroll.js'%}"></script>
-        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>
+{#        <script src="{% static 'main/js/jquery.sticky.js'%}"></script>#}
         <script src="{% static 'main/js/wow.min.js'%}"></script>
         <script src="{% static 'main/js/main.js'%}"></script>
 
