--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -73,10 +73,13 @@
 		<section class="blog-single">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
+                <div class="col-md-2"></div>
+
+					<div class="col-md-8 ">
+                    {% for new in news %}
 						<div class="single-blog">
 
-                            {% for new in news %}
+
 							<a href="{% url 'NewsDetail' new.id %}"><h3>{{ new.title }}</h3></a>
 							<img src="{% if new.image %}{{ new.image.url }}{% endif %}" alt="News" />
                                 <p>
@@ -93,20 +96,35 @@
                             </p>
 
 						</div>
-                     {% endfor %}
 
+                    {% endfor %}
 						<!-- Pagination -->
 						<div id="pagination">
-							<span class="all">Page 1 of 3</span>
-							<span class="current">1</span>
-							<a href="#" class="inactive">2</a>
-							<a href="#" class="inactive">3</a>
+							<span class="all">{{ news.number }}-й из {{ news.paginator.num_pages }}</span>
+                            {% if news.has_previous %}
+                             <a href="?page={{ news.previous_page_number }}">назад</a>
+                             {% endif %}
+
+                                {% for i in news.paginator.page_range %}
+                                    {% if news.number == i %}
+                                        <span class="current">{{ i }}  </span>
+                                    {% else %}
+                                        <a href="?page={{ i }}">{{ i }}</a>
+                                    {% endif %}
+                                    {% endfor %}
+
+
+                        {% if news.has_next %}
+                        <a href="?page={{ news.next_page_number }}">вперед</a>
+                        {% endif %}
+{#							<a href="#" class="inactive">2</a>#}
+{#							<a href="#" class="inactive">3</a>#}
 						</div>
 						<!-- Pagination -->
 
 					</div>
 
-
+<div class="col-md-2"></div>
 				</div>
 			</div>
 		</section>
