--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -1,126 +1,137 @@
+{% load staticfiles %}
 <!doctype html>
-<html lang="en">
-{% load static %}
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Продукты</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="{% static 'account/img/apple-icon.png' %}">
-	<link rel="icon" type="image/png" sizes="96x96" href="{% static 'account/img/favicon.png' %}">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
 
-	<title> {{ product.name }}</title>
-
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-
-    <!-- Bootstrap core CSS     -->
-    <link href="{% static 'account/css/bootstrap.min.css' %}" rel="stylesheet" />
-
-    <!-- Animation library for notifications   -->
-    <link href="{% static 'account/css/animate.min.css' %}" rel="stylesheet"/>
-
-    <!--  Paper Dashboard core CSS    -->
-    <link href="{% static 'account/css/paper-dashboard.css' %}" rel="stylesheet"/>
-
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="{% static 'account/css/demo.css' %}" rel="stylesheet" />
-    <!--<link href="{% static 'graph/tree.css' %}" rel="stylesheet" />-->
-    <!--  Fonts and icons     -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="{% static 'account/css/themify-icons.css' %}" rel="stylesheet">
-<link href="{% static 'account/css/style.css' %}" rel="stylesheet"/>
-</head>
+		<!-- Font -->
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,700,600italic,700italic,800,800italic' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+		<!-- Font -->
 
 
-<body>
+       <link rel="stylesheet" href="{% static 'main/css/normalize.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/main.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/font-awesome.min.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/animate.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/bootstrap.min.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/style.css'%}">
+        <link rel="stylesheet" href="{% static 'main/css/responsive.css'%}">
+        <script src="{% static 'main/js/vendor/modernizr-2.8.3.min.js'%}"></script>
+
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+		<!-- Header Start -->
+		<header>
+
+			<!-- Main Menu Start -->
+			<div class="main-menu">
+				<div class="navbar-wrapper">
+					<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+						<div class="container">
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+									<span class="sr-only">Toggle Navigation</span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+								</button>
+
+								<a href="" class="navbar-brand"><img src="{% static 'main/img/logo.png'%}" alt="Logo" /></a>
+							</div>
+
+							<div class="navbar-collapse collapse">
+								<ul class="nav navbar-nav navbar-right">
+									<li> <a href="{% url 'MainPage' %}">Главная</a></li>
+                                    <li><a href="{% url 'Products' %}"> Наши продукты </a></li>
+
+								</ul>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Main Menu End -->
 
 
-
-{% block navbar %}
-        <nav class="navbar navbar-default">
-          <div class="top container">
-              <a href="{% url 'Products' %}"> Наши продукты </a>
-          </div>
-        </nav>
-{% endblock %}
-{% block content %}
- <div class="content">
-            <div class="container-fluid">
-                <div class="row">
-                      <section id="content row" class="container-fluid">
-                       <div class="product-detail" xmlns:cart="http://www.w3.org/1999/xhtml">
-    <div class="col-sm-4">
-      <img src="{% if product.image %}{{ product.image.url }}{% else %}{% endif %}" class="img-responsive">
-    </div>
-    <div class="col-sm-8">
-      <h4>{{ product.name }}</h4>
-
-      <p class="price text-info">
-        {{ product.price }} y.e.
-      </p>
-
-
-      <span>
-        {{ product.description | linebreaks}}
-      </span>
-    </div>
-  </div>
-                      </section>
-
-                </div>
-            </div>
-        </div>
+		</header>
+		<!-- Header End -->
 
 
 
-{% endblock %}
+		<section class="blog-single">
+			<div class="container">
+				<div class="row">
 
-        {% block footer %}
-        <footer class="footer">
-            <div class="container-fluid">
-                <nav class="pull-left">
-                    <ul>
+                    <div class="col-sm-4">
+                        <img src="{% if product.image %}{{ product.image.url }}{% else %}{% endif %}" class="img-responsive">
+                    </div>
+                     <div class="col-sm-8">
+                        <h4>{{ product.name }}</h4>
 
-                        <li>
-                            <a href="{% url 'MainPage' %}">
-                                Главная
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-				<div class="copyright pull-right">
-                    &copy; <script>document.write(new Date().getFullYear())</script>, разработано <a href="">Ananasit</a>
-                </div>
-            </div>
-        </footer>
-{% endblock %}
+                         <p class="price text-info">
+                            {{ product.price }} y.e.
+                         </p>
+                       <span>
+                        {{ product.description | linebreaks}}
+                       </span>
+                     </div>
+
+                    </div>
 
 
-</body>
+				</div>
+			</div>
+		</section>
 
-    <!--   Core JS Files   -->
-    <script src="{% static 'account/js/jquery.min.js' %}" type="text/javascript"></script>
-	<script src="{% static 'account/js/bootstrap.min.js' %}" type="text/javascript"></script>
-	<!--  Checkbox, Radio & Switch Plugins -->
-	<script src="{% static 'account/js/bootstrap-checkbox-radio.js' %}"></script>
 
-	<!--  Charts Plugin -->
-	<script src="{% static 'account/js/chartist.min.js' %}"></script>
 
-    <!--  Notifications Plugin    -->
-    <script src="{% static 'account/js/bootstrap-notify.js' %}"></script>
 
-    <!--  Google Maps Plugin    -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+		<!-- Copyright -->
+		<div class="copyright">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 ">
+							<div class="copyright pull-right">
+								<p>All Rights Reserved | Copyright 2019 ©   <a href="#">Ananasit</a></p>
+							</div>
+						</div>
 
-    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-	<script src="{% static 'account/js/paper-dashboard.js' %}"></script>
 
-	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-	<script src="{% static 'account/js/demo.js' %}"></script>
+					</div>
+				</div>
+			</div>
 
- {% block javascript %}
+		<!-- footer -->
 
- {% endblock %}
+
+
+
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{% static 'main/js/vendor/jquery-1.12.0.min.js'%}"><\/script>')</script>
+        <script src="{% static 'main/js/plugins.js'%}"></script>
+        <script src="{% static 'main/js/bootstrap.min.js'%}"></script>
+         <script src="{% static 'main/js/main.js'%}"></script>
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+    </body>
 </html>
