--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -252,87 +252,76 @@
 							<h3>Отзывы <span>клиентов</span></h3>
 						</div>
 					</div>
-				</div>
+                </div>
 
-				<div id="fawesome-carousel-two" class="carousel slide" data-ride="carousel">
+				<div id="fawesome-carousel-two" class="carousel slide" data-ride="carousel" data-interval="3000">
 					<ol class="carousel-indicators">
-						<li data-target="#fawesome-carousel-two" data-slide-to="0" class="active"></li>
+
+						<li data-target="#fawesome-carousel-two" data-slide-to="0" ></li>
 						<li data-target="#fawesome-carousel-two" data-slide-to="1"></li>
-					</ol>
+                        <li data-target="#fawesome-carousel-two" data-slide-to="2"></li>
+                        <li data-target="#fawesome-carousel-two" data-slide-to="3"></li>
+                    </ol>
 
-					<div class="carousel-inner" role="listbox">
-						<div class="item active">
-							<div class="row">
-								<div class="col-sm-6">
+					<div class="carousel-inner" >
+
+
+
+                                {% for testim in testims %}
+                                {% if forloop.first %}
+                                    <div class="item active">
+
+								    <div class="col-md-6 col-md-offset-3">
 									<div class="single-testimonials">
 										<div class="text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
+                                            <p>
+                                                {{ testim.text }}
+                                            </p>
+                                        </div>
 
 										<div class="profile-image">
 
-											<h4>John Doe</h4>
-											<p>Marketing Manager</p>
+											<h4>{{ testim.name }}</h4>
+											<p>{{ testim.profession }}</p>
 										</div>
 
 									</div>
 								</div>
 
-								<div class="col-sm-6">
+                                    </div>
+                                    {% else %}
+                                    <div class="item ">
+
+								    <div class="col-md-6 col-md-offset-3">
 									<div class="single-testimonials">
 										<div class="text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
+                                            <p>
+                                                {{ testim.text }}
+                                            </p>
+                                        </div>
 
 										<div class="profile-image">
 
-											<h4>John Doe</h4>
-											<p>Marketing Manager</p>
+											<h4>{{ testim.name }}</h4>
+											<p>{{ testim.profession }}</p>
 										</div>
 
 									</div>
 								</div>
-							</div>
-						</div>
+                                    </div>
+                                    {% endif %}
 
-						<!-- Next Slide -->
-						<div class="item">
-							<div class="row">
-								<div class="col-sm-6">
-									<div class="single-testimonials">
-										<div class="text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
 
-										<div class="profile-image">
-											<h4>Jason Cheng</h4>
-											<p>Marketing Manager</p>
-										</div>
+ {% endfor %}
 
-									</div>
-								</div>
+                    </div>
 
-								<div class="col-sm-6">
-									<div class="single-testimonials">
-										<div class="text">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-										</div>
 
-										<div class="profile-image">
-											<h4>Kim Cheng</h4>
-											<p>Marketing Manager</p>
-										</div>
-
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- Next Slide -->
 
 					</div>
 
-				</div>
 
+{#</div>#}
 			</div>
 		</section>
 
@@ -387,6 +376,22 @@
 		<!-- Pricing --->
 		<section  id="pricing">
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="title">
+							<h3></h3>
+						</div>
+						<div class="title">
+							<h3>Карта</h3>
+						</div>
+					</div>
+                    <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5849.201787498955!2d74.56479752964187!3d42.86015970000084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec84a03bad5e7%3A0xb3b6d55dbbe4839f!2zNCDRg9C7LiDQotGL0L3Ri9Cx0LXQutC-0LLQsCwg0JHQuNGI0LrQtdC6!5e0!3m2!1sru!2skg!4v1554356687522!5m2!1sru!2skg" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+
+            </div>
 		</section>
 		<!-- Pricing --->
 
@@ -514,13 +519,13 @@
 
 {#		<script src="{% static 'main/js/custom.js'%}"></script>#}
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+{#        <script>#}
+{#            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=#}
+{#            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;#}
+{#            e=o.createElement(i);r=o.getElementsByTagName(i)[0];#}
+{#            e.src='https://www.google-analytics.com/analytics.js';#}
+{#            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));#}
+{#            ga('create','UA-XXXXX-X','auto');ga('send','pageview');#}
+{#        </script>#}
     </body>
 </html>
