--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -81,26 +81,31 @@
 					</ol>
 
 					<div class="carousel-inner" role="listbox">
+
+                     {% for slide in slides %}
+                         {% if forloop.first %}
 						<div class="item active">
-							<img src="{% static 'main/img/slider1.jpg'%}" alt="Sider Big Image">
+							<img src="{% if slide.image %}{{ slide.image.url }}{% endif %}" alt="Slider Big Image">
 							<div class="carousel-caption">
-								<h1 class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
-                                consectetur adipiscing elit
-                                <div class="slider-btn wow fadeIn">
-									<a href="#" class="btn btn-learn">Learn More</a>
+								<h1 class="wow fadeInLeft">{{ slide.title }}</h1>
+{#                                {{ slide.description|truncatewords:5 }}#}
+                                    <div class="slider-btn wow fadeIn">
+									<a href="{% url 'SlideDetail' slide.id %}" class="btn btn-learn">Подробнее</a>
 								</div>
 							</div>
 						</div>
+                         {% else %}
 						<div class="item">
-							<img src="{% static 'main/img/slider2.jpg'%}" alt="Sider Big Image">
+							<img src="{% if slide.image %}{{ slide.image.url }}{% endif %}" alt="Slider Big Image">
 							<div class="carousel-caption">
-								<h1 class="wow fadeInLeft">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
-								<div class="slider-btn wow fadeIn">
-									<a href="#" class="btn btn-learn">Learn More</a>
+								<h1 class="wow fadeInLeft">{{ slide.title }}</h1>
+                                <div class="slider-btn wow fadeIn">
+									<a href="{% url 'SlideDetail' slide.id %}" class="btn btn-learn">Подробнее</a>
 								</div>
 							</div>
 						</div>
+                         {% endif %}
+                         {% endfor %}
 					</div>
 				</div>
 			</div>
@@ -254,7 +259,7 @@
 					</div>
                 </div>
 
-				<div id="fawesome-carousel-two" class="carousel slide" data-ride="carousel" data-interval="3000">
+				<div id="fawesome-carousel-two" class="carousel slide" data-ride="carousel" data-interval="6000">
 					<ol class="carousel-indicators">
 
 						<li data-target="#fawesome-carousel-two" data-slide-to="0" ></li>
@@ -387,7 +392,7 @@
 						</div>
 					</div>
                     <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5849.201787498955!2d74.56479752964187!3d42.86015970000084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec84a03bad5e7%3A0xb3b6d55dbbe4839f!2zNCDRg9C7LiDQotGL0L3Ri9Cx0LXQutC-0LLQsCwg0JHQuNGI0LrQtdC6!5e0!3m2!1sru!2skg!4v1554356687522!5m2!1sru!2skg" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5849.201787498955!2d74.56479752964187!3d42.86015970000084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec84a03bad5e7%3A0xb3b6d55dbbe4839f!2zNCDRg9C7LiDQotGL0L3Ri9Cx0LXQutC-0LLQsCwg0JHQuNGI0LrQtdC6!5e0!3m2!1sru!2skg!4v1554356687522!5m2!1sru!2skg" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
 
@@ -421,6 +426,7 @@
 							<h4>Бишкек</h4>
 							<p>ул. Тыныбекова 4/пересекает Некрасова <br/>
                                 (возле чайхана Кара-Суу) <br />
+                                тел.+996 558 58 22 58
 							</p>
 						</div>
 					</div>
@@ -432,6 +438,7 @@
 							<h4>Ош</h4>
 							<p>ул. Курманжан Датка 281а  <br/>
                                 (возле гостиницы Алай) <br />
+                                тел.+996 772 90 55 17
 							</p>
 						</div>
 					</div>
@@ -445,7 +452,7 @@
 							<p>Центральный рынок.
                                 <br/>
                          Магазин Маркай <br/>
-
+                            тел.+996 557 79 19 01
 							</p>
 						</div>
 					</div>
