--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -298,6 +298,7 @@ var x = setInterval(function() {
                                         </div>
                                     </div>
                                     <div class="clearfix"></div>
+                                    Дата регистрации: {{ node.reg_date }}
                                 </form>
                             </div>
                         </div>
