--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -214,7 +214,7 @@ var x = setInterval(function() {
                     <div class="col-lg-8 col-md-7">
                         <div class="form-group">
                         <label>Ваша реферальная ссылка</label>
-                        <input type="text"  name="referal"  class="form-control border-input" value="http://aromals.org/account/signup?inviter={{node.pk }}">
+                        <input type="text"  name="referal"  class="form-control border-input" value="http://95.179.198.148/account/signup?inviter={{node.pk }}">
                         </div>
                     </div>
                 </div>
