--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -85,7 +85,7 @@
                                                         {% if packages %}
                                                              <select name="package_id" class="form-control border-input">
                                                           {% for package in packages %}
-                                                              <option value="{{ package.id }}">{{ package.name }} - {{ package.point }}</option>
+                                                              <option value="{{ package.id }}">{{ package.name }} - {{ package.percent }} %</option>
                                                          {% endfor %}
                                                              </select>
                                                        {% endif %}
