--- a/account/templates/account/bonus_history.html
+++ b/account/templates/account/bonus_history.html
@@ -84,7 +84,7 @@
         {% for bonus in history %}
             <tr>
                 <td>{{ bonus.type }}</td>
-                <td>{{ bonus.partner.last_name }} {{ bonus.partner.first_name }}</td>
+                <td>{{ bonus.partner.name }}</td>
                 <td>{{ bonus.value }}</td>
                 <td>{{ bonus.created_date }}</td>
             </tr>
