temporary changes html

--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -100,7 +100,8 @@
 							<div class="carousel-caption">
 								<h1 class="wow fadeInLeft">{{ slide.title }}</h1>
                                 <div class="slider-btn wow fadeIn">
-									<a href="{% url 'SlideDetail' slide.id %}" class="btn btn-learn">Подробнее</a>
+									<!--<a href="{% url 'SlideDetail' slide.id %}" class="btn btn-learn">Подробнее</a>-->
+                                    <a href="{% url 'NewsList' %}" class="btn btn-learn">Подробнее</a>
 								</div>
 							</div>
 						</div>
