--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -86,7 +86,10 @@
 							<img src="{{ new.image.url }}" alt="News" />
                             {% endif %}
                         {% if new.video %}
-                            <iframe width="100%" height="450" src="{{ new.video }}" frameborder="0" allowfullscreen></iframe>
+                            <video width="100%" height="450" controls="true">
+                               <source src="{{ new.video }}" type="video/mp4" />
+                            </video>
+                            <!--<iframe width="100%" height="450" src="{{ new.video }}" frameborder="0" allowfullscreen></iframe>-->
                         {% endif %}
 
                                 <p>
