--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -87,7 +87,7 @@
                             {% endif %}
                         {% if new.video %}
                             <video width="100%" height="450" controls="true">
-                               <source src="{{ new.video }}" type="video/mp4" />
+                               <source src="{{ new.video }}#t=0.5" type="video/mp4" />
                             </video>
                             <!--<iframe width="100%" height="450" src="{{ new.video }}" frameborder="0" allowfullscreen></iframe>-->
                         {% endif %}
