--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -86,7 +86,7 @@
 							<img src="{{ new.image.url }}" alt="News" />
                             {% endif %}
                         {% if new.video %}
-                            <video poster="http:localhost/media/poster.png" width="100%" height="450" controls="true">
+                            <video poster="http://95.179.198.148/media/news/2019/06/08/Travel-Mashup_rAVFfUo.jpg" width="100%" height="450" controls="true">
                                <source src="{{ new.video }}" type="video/mp4" />
                             </video>
                             <!--<iframe width="100%" height="450" src="{{ new.video }}" frameborder="0" allowfullscreen></iframe>-->
