ip to domain name

--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -358,7 +358,7 @@
 							<img src="{{ new.image.url }}" alt="News" />
                             {% endif %}
                         {% if new.video %}
-                            <video poster="http://95.179.198.148/media/poster.png" width="100%" height="450" controls="true">
+                            <video poster="http://elite-world.club/media/poster.png" width="100%" height="450" controls="true">
                                <source src="{{ new.video }}" type="video/mp4" />
                             </video>
                             <!--<iframe width="100%" height="450" src="{{ new.video }}" frameborder="0" allowfullscreen></iframe>-->
