--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="{% static 'account/img/favicon.png' %}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Aroma Lifestyle</title>
+	<title>Elite Travel Club</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -42,7 +42,7 @@
     	<div class="sidebar-wrapper">
             <div class="logo">
                 <a href="" class="simple-text">
-                    Aroma Lifestyle
+                    Elite Travel Club
                 </a>
             </div>
             <ul class="nav">
