--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -59,7 +59,7 @@
     	<div class="sidebar-wrapper">
             <div class="logo">
                 <a href="" class="simple-text">
-                    Aroma Lifestyle
+                    Elite Travel Club
                 </a>
             </div>
             <ul class="nav">
