--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -61,7 +61,7 @@
     	<div class="sidebar-wrapper">
             <div class="logo">
                 <a href="" class="simple-text">
-                    Aroma Lifestyle
+                    Elite Travel Club
                 </a>
             </div>
             <ul class="nav">
