--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -153,31 +153,7 @@
         </button>
       </div>
       <div class="modal-body">
-            <p style="text-indent: 30px"> Совместный проект LifeStyle при ОсОО «АromaЕсо» это транснациональный проект,
-          специализирующийся на реализации фармакологических препаратов и косметических
-          средств на международном розничном рынке, а так же туристическом бизнесе, финансовых операциях и инвестиционной деятельности.
-            Основные направления деятельности проекта — оздоровление, восстановление и поддержание здоровья.
-          Продукция разработана на основе пяти тысячелетнего опыта тибетской медицины,
-          изготовление с использованием современных НАНОТЕХНОЛОГИЙ.
-                            <br/></p>
-
-            <p style="text-indent: 30px">МИССИЯ КОМПАНИИ: содействовать повышению качества жизни людей, предоставляя возможность независимым
-          дистрибуторам компании вести выгодный и интересный бизнес в партнерстве с компанией, а для
-          клиентов пользоваться знаниями и качественной продукцией для восстановления и поддержания здоровья,
-          предоставление населению возможность  потребления, улучшение качества жизни,
-          построение гармоничного международного сообщества.
-                <br/></p>
-            <p style="text-indent: 30px">ФИЛОСОФИЯ БИЗНЕСА: Служить обществу, восстанавливая здоровье человечества.
-                <br/></p>
-<p style="text-indent: 30px">КОРПОРАТИВНЫИ ДУХ КОМПАНИИ: Внести максимальный вклад в развитие
-          экономики страны, стремится к великим целям посредством организации командной работы и истиной самоотдачи.
-    <br/></p>
-        <p style="text-indent: 30px">«Я желаю Вам, мои дорогие партнеры дальнейших успехов и процветания в
-          деле развития нашего общего дела, никогда не терять уверенности в
-          себе, веру в себя и в компанию, всегда добиваться всего, о чем мечтает сердце,
-          больших вознаграждений за любые старания. И поблагодарить Вас, мои дорогие партнеры,
-          за доверие и поддержку, за продуктивную работу, которая помогает нам развиваться и идти только
-            вперед, за реализацию всех намеченных целей и за вашу искреннюю веру в наше дело»</p>
+            <p style="text-indent: 30px"></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
@@ -434,10 +410,10 @@
 					<div class="col-sm-3">
 						<div class="single-footer">
 							<h4>Бишкек</h4>
-							<p>ул. Тыныбекова 4/пересекает Некрасова <br/>
+							<!--<p>ул. Тыныбекова 4/пересекает Некрасова <br/>
                                 (возле чайхана Кара-Суу) <br />
                                 тел.+996 558 58 22 58
-							</p>
+							</p>-->
 						</div>
 					</div>
 					<!-- Single Footer -->
@@ -446,10 +422,10 @@
 					<div class="col-sm-3">
 						<div class="single-footer">
 							<h4>Ош</h4>
-							<p>ул. Курманжан Датка 281а  <br/>
+							<!--<p>ул. Курманжан Датка 281а  <br/>
                                 (возле гостиницы Алай) <br />
                                 тел.+996 772 90 55 17
-							</p>
+							</p>-->
 						</div>
 					</div>
 					<!-- Single Footer -->
@@ -459,11 +435,11 @@
 					<div class="col-sm-3">
 						<div class="single-footer">
 							<h4>Жала-Абад</h4>
-							<p>Центральный рынок.
+							<!--<p>Центральный рынок.
                                 <br/>
                          Магазин Маркай <br/>
                             тел.+996 557 79 19 01
-							</p>
+							</p>-->
 						</div>
 					</div>
 					<!-- Single Footer -->
