--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -128,13 +128,16 @@
 					<div class="col-sm-6">
 						<div >
 							<h3>О компании</h3>
-							<p>Совместный проект LifeStyle при ОсОО «АromaЕсо» это
-                                транснациональный проект, специализирующийся на реализации
-                                фармакологических препаратов и косметических средств на международном
-                                розничном рынке, а так же туристическом бизнесе, финансовых операциях и инвестиционной деятельности.
-                                    Основные направления деятельности проекта — оздоровление, восстановление и поддержание
-                                здоровья. Продукция разработана на основе пяти тысячелетнего опыта тибетской медицины,
-                                изготовление с использованием современных технологий.
+							<p>ELITE
+TRAVEL CLUB это новый, смелый и совершенно
+невероятный проект, который откроет для вас новые возможности в
+области самосовершенствования и обучения. Далекие страны,
+невероятные впечатления перестанут быть привилегиями. Если вы
+стремитесь не только к материальным, но и духовным ценностям, это
+значит, что вы достигли нового уровня самопознания, а путешествия
+обогатят вас духовно!Ведь мы живем в замечательное время, когда все
+зависит только от нас самих! Мы можем ставить перед собой смелые
+цели и задачи, и при желании достигать всего чего пожелаем
 {#                                <a href="#" class="btn btn-read-more">Подробнее</a>#}
 
                             <!-- Button trigger modal -->
@@ -153,7 +156,26 @@
         </button>
       </div>
       <div class="modal-body">
-            <p style="text-indent: 30px"></p>
+            <p style="text-indent: 30px">ELITE TRAVEL CLUB это новый, смелый и совершенно
+невероятный проект, который откроет для вас новые возможности в
+области самосовершенствования и обучения. Далекие страны,
+невероятные впечатления перестанут быть привилегиями. Если вы
+стремитесь не только к материальным, но и духовным ценностям, это
+значит, что вы достигли нового уровня самопознания, а путешествия
+обогатят вас духовно!Ведь мы живем в замечательное время, когда все
+зависит только от нас самих! Мы можем ставить перед собой смелые
+цели и задачи, и при желании достигать всего чего пожелаем
+                            <br/>
+Но успех не приходит сам, он сопутствует лишь тем, кто готов
+работать над собой, и при любой возможности учиться новому. Почему
+это важно? Все, очень просто! Мир динамично развивается и меняется,
+и вместе с тем наши знания стремительно устаревают. Даже если у вас
+многолетний опыт работы, но вы не совершенствуете свои навыки, то
+вы устареваете как специалист . Став частью нашего международного
+клуба, вы будете получать порцию вдохновляющего и применимого
+контента, полезные кейсы и лучшие советы по улучшению навыков от
+влиятельных бизнес тренеров из разных стран.
+                        </p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
