--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -128,16 +128,13 @@
 					<div class="col-sm-6">
 						<div >
 							<h3>О компании</h3>
-							<p>ELITE
-TRAVEL CLUB это новый, смелый и совершенно
-невероятный проект, который откроет для вас новые возможности в
-области самосовершенствования и обучения. Далекие страны,
-невероятные впечатления перестанут быть привилегиями. Если вы
-стремитесь не только к материальным, но и духовным ценностям, это
-значит, что вы достигли нового уровня самопознания, а путешествия
-обогатят вас духовно!Ведь мы живем в замечательное время, когда все
-зависит только от нас самих! Мы можем ставить перед собой смелые
-цели и задачи, и при желании достигать всего чего пожелаем
+							<p>ELITE TRAVEL CLUB это новый, смелый и совершенно
+                                невероятный проект, который откроет для вас новые возможности в
+                                области самосовершенствования и обучения. Далекие страны,
+                                невероятные впечатления перестанут быть привилегиями. Если вы стремитесь не только к материальным,
+                                но и духовным ценностям, это значит, что вы достигли нового уровня самопознания, а путешествия
+                                обогатят вас духовно!Ведь мы живем в замечательное время, когда все зависит только от нас самих! Мы можем ставить перед собой смелые
+                                цели и задачи, и при желании достигать всего чего пожелаем
 {#                                <a href="#" class="btn btn-read-more">Подробнее</a>#}
 
                             <!-- Button trigger modal -->
@@ -155,26 +152,18 @@ TRAVEL CLUB это новый, смелый и совершенно
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-            <p style="text-indent: 30px">ELITE TRAVEL CLUB это новый, смелый и совершенно
-невероятный проект, который откроет для вас новые возможности в
-области самосовершенствования и обучения. Далекие страны,
-невероятные впечатления перестанут быть привилегиями. Если вы
-стремитесь не только к материальным, но и духовным ценностям, это
-значит, что вы достигли нового уровня самопознания, а путешествия
-обогатят вас духовно!Ведь мы живем в замечательное время, когда все
-зависит только от нас самих! Мы можем ставить перед собой смелые
-цели и задачи, и при желании достигать всего чего пожелаем
-                            <br/>
-Но успех не приходит сам, он сопутствует лишь тем, кто готов
-работать над собой, и при любой возможности учиться новому. Почему
-это важно? Все, очень просто! Мир динамично развивается и меняется,
-и вместе с тем наши знания стремительно устаревают. Даже если у вас
-многолетний опыт работы, но вы не совершенствуете свои навыки, то
-вы устареваете как специалист . Став частью нашего международного
-клуба, вы будете получать порцию вдохновляющего и применимого
-контента, полезные кейсы и лучшие советы по улучшению навыков от
-влиятельных бизнес тренеров из разных стран.
+      <div class="modal-body"><p style="text-indent: 30px"> ELITE TRAVEL CLUB это новый, смелый и совершенно
+                             невероятный проект, который откроет для вас новые возможности в области самосовершенствования и обучения. Далекие страны,
+                            невероятные впечатления перестанут быть привилегиями. Если вы стремитесь не только к материальным, но и духовным ценностям, это
+                            значит, что вы достигли нового уровня самопознания, а путешествия обогатят вас духовно!Ведь мы живем в замечательное время, когда все
+                            зависит только от нас самих! Мы можем ставить перед собой смелые цели и задачи, и при желании достигать всего чего пожелаем
+                            <br/></p>
+                            <p style="text-indent: 30px">
+                            Но успех не приходит сам, он сопутствует лишь тем, кто готов работать над собой, и при любой возможности учиться новому. Почему
+                            это важно? Все, очень просто! Мир динамично развивается и меняется, и вместе с тем наши знания стремительно устаревают. Даже если у вас
+                            многолетний опыт работы, но вы не совершенствуете свои навыки, то вы устареваете как специалист . Став частью нашего международного
+                            клуба, вы будете получать порцию вдохновляющего и применимого контента, полезные кейсы и лучшие советы по улучшению навыков от
+                            влиятельных бизнес тренеров из разных стран.
                         </p>
       </div>
       <div class="modal-footer">
@@ -346,8 +335,6 @@ TRAVEL CLUB это новый, смелый и совершенно
 				</div>
 
 				<div class="row">
-
-
                     {% for new in news %}
                         <div class="col-sm-4">
 						<div class="single-blog">
@@ -408,13 +395,6 @@ TRAVEL CLUB это новый, смелый и совершенно
 		</section>
 		<!-- Pricing --->
 
-
-
-
-
-
-
-
 		<!-- footer -->
 
 		<footer>
@@ -432,10 +412,9 @@ TRAVEL CLUB это новый, смелый и совершенно
 					<div class="col-sm-3">
 						<div class="single-footer">
 							<h4>Бишкек</h4>
-							<!--<p>ул. Тыныбекова 4/пересекает Некрасова <br/>
-                                (возле чайхана Кара-Суу) <br />
-                                тел.+996 558 58 22 58
-							</p>-->
+                            <p>Т/Ц «Вефа», 10 этаж <br/>
+                                   тел. +996 558 58 22 58
+							</p>
 						</div>
 					</div>
 					<!-- Single Footer -->
