--- a/graph/templates/graph/tree_inline.html
+++ b/graph/templates/graph/tree_inline.html
@@ -73,12 +73,20 @@
                <div class="row">
                    Левая: {{ left_count }} | Правая: {{ right_count }} | Общее количество: {{ total_count }}
                </div>
+                   <div class="row">
+                       {%if user.is_authenticated%}
+                                {%if user.node.id|slugify != root_id|slugify %}
+                                            <a style="border-width: 0px;" href="http://elite-world.club/graph/account.models.Node/{{user.node.id}}/" id="{{ user.node.id }}">Назад</a>
+                                {% endif %}
+                       {% endif %}
+                    </div>
 	<div class="text-left" style="width: 3000px; display:inline-block; overflow-x:scroll">
 		<div class="tree">
 			<ul>
 			{% recursetree nodes %}
 		        <li>
-		        	<a style="border-width: 0px;" href="{% if node.url %}{{ node.url }}{% else %}{{ node.get_absolute_url }}{% endif %}" id="{{ id }}">
+		        	<!--<a style="border-width: 0px;" href="{% if node.url %}{{ node.url }}{% else %}{{ node.get_absolute_url }}{% endif %}" id="{{ id }}">-->
+                    <a style="border-width: 0px;" href="http://elite-world.club/graph/account.models.Node/{{ node.id }}/" id="{{ node.id }}">
                         <div class="logo-container">
                         <div class="logo">
                             <img style="border-radius: 50%;" src="{% static 'account/img/new_logo.png' %}"/>
